--- a/style/main.css
+++ b/style/main.css
@@ -1,175 +1,196 @@
 * {
-    /* font-family: 'Inconsolata', monospace; */
-    /* font-family: 'Roboto', sans-serif; */
-    font-family: 'Work Sans', sans-serif;
-    color: #033B3D;
+  font-family: 'Work Sans', sans-serif;
+  color: #033B3D;
 }
 
 .no-margin {
-    margin: 0;
+  margin: 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    margin: 0;
-    margin-bottom: 10px;
+  margin: 0;
+  margin-bottom: 10px;
 }
 
 .container {
-    width: 1000px;
+  width: 1000px;
 }
 
 body {
-    margin: 0;
-    min-height: 100vh;
+  margin: 0;
+  min-height: 100vh;
 }
 
 body::before {
-    z-index: -1;
-    content: "";
-    position: absolute;
-    top: 0; left: 0;
-    width: 100%; height: 140px;
-    background-color: #0CC59E;
+  z-index: -1;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 140px;
+  background-color: #0CC59E;
 }
 
 body::after {
-    z-index: -1;
-    content: "";
-    position: absolute;
-    top: 130px; left: 0;
-    width: 100%; height: 100%;
-    background-image: url(../images/background.png);
-    background-repeat: no-repeat;
+  z-index: -1;
+  content: "";
+  position: absolute;
+  top: 130px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(../images/background.png);
+  background-repeat: no-repeat;
 }
 
 .flex {
-    display: flex;
-    justify-content: space-between;
-}
-
-ul {
-    list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 header {
-    padding: 30px 0;
+  padding: 30px 0;
 }
 
 header .button, header .link {
-    margin-left: 20px;
+  margin-left: 20px;
 }
 
 .button, .link {
-    cursor: pointer;
-    font-size: 14px;
-    border: none;
+  cursor: pointer;
+  font-size: 14px;
+  border: none;
 }
 
-.button {    
-    padding: 10px 20px;
-    background: white;
-    padding: 10px 20px;
-    border-radius: 100px;
-    text-decoration: none;
+.button {
+  padding: 10px 20px;
+  background: white;
+  padding: 10px 20px;
+  border-radius: 100px;
+  text-decoration: none;
 }
 
 .link {
-    padding: 5px 0px;
-    position: relative;
-    background: transparent;
-    color: white;
-}
-
-.link:hover::after {
-    width: 100%;
+  padding: 5px 0px;
+  position: relative;
+  background: transparent;
+  color: white;
 }
 
 .link::after {
-    content: "";
-    transition: 0.3s;
-    position: absolute;
-    left: 0px;
-    bottom: 0px;
-    width: 0;
-    height: 2px;
-    background-color: white;
+  content: "";
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  width: 0;
+  height: 2px;
+  background-color: white;
+}
+
+.link:hover::after {
+  width: 100%;
 }
 
 .project {
-    padding: 20px;
-    margin-bottom: 20px;
-    transition: 0.3s;
-    /* border-radius: 40px; */
-    border: 2px solid transparent;
+  padding: 20px;
+  margin-bottom: 20px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  border: 2px solid transparent;
 }
 
 .project:hover {
-    border: 2px solid #033B3D;
+  border: 2px solid #033B3D;
 }
 
 .project__name {
-    position: relative;
-    padding-bottom: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  position: relative;
+  padding-bottom: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .project__name::after {
-    content: "";
-    position: absolute;
-    left: 0px;
-    bottom: 0px;
-    width: 100%;
-    height: 2px;
-    background-color: black;
+  content: "";
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  width: 100%;
+  height: 2px;
+  background-color: black;
 }
 
-.project>.description {
-    margin-top: 20px;
-    display: flex;
+.project .description {
+  margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-.project>.description>.text {
-    margin-left: 20px;
+.project .description .text {
+  margin-left: 20px;
 }
 
-.project>.description>.text>.tech {
-    margin-bottom: 20px;
+.project .description .text .tech {
+  margin-bottom: 20px;
 }
 
-.preview {
-    width: 300px;
+.project .description .text .tech__el {
+  font-weight: 400;
+  background-color: #e5e5e5;
+  padding: 2px 10px;
+  border-radius: 4px;
+  display: inline;
+  margin-left: 5px;
+}
+
+.project .preview {
+  width: 300px;
 }
 
 .center {
-    margin: auto;
+  margin: auto;
 }
 
 .subtitle {
-    color: rgb(175, 175, 175);
-    font-weight: 300;
+  color: #afafaf;
+  font-weight: 300;
 }
 
 .contacts {
-    position: fixed;
-    left: 0px;
-    bottom: 10px;
+  position: fixed;
+  left: 0px;
+  bottom: 10px;
 }
 
 #name {
-    position: relative;
-    z-index: 1;
-    margin-top: 160px;
-    margin-bottom: 100px;
-    text-align: center;
+  position: relative;
+  z-index: 1;
+  margin-top: 160px;
+  margin-bottom: 100px;
+  text-align: center;
 }
 
-#name>h1 {
-    font-size: 48px;
-    letter-spacing: 5px;
+#name h1 {
+  font-size: 48px;
+  letter-spacing: 5px;
 }
 
-#name>h4 {
-    font-size: 18px;
+#name h4 {
+  font-size: 18px;
 }
+/*# sourceMappingURL=main.css.map */
