--- a/style/main.css
+++ b/style/main.css
@@ -28,7 +28,7 @@ body::before {
   top: 0;
   left: 0;
   width: 100%;
-  height: 140px;
+  height: 30px;
   background-color: #0CC59E;
 }
 
@@ -36,7 +36,7 @@ body::after {
   z-index: -1;
   content: "";
   position: absolute;
-  top: 130px;
+  top: 20px;
   left: 0;
   width: 100%;
   height: 100%;
@@ -124,6 +124,32 @@ header .button, header .link {
           align-items: center;
 }
 
+.project__name a.button {
+  display: inline-block;
+  text-align: center;
+  width: 25px;
+  height: 25px;
+  padding: 10px;
+  margin-left: 10px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.project__name a.button i {
+  margin-top: 13px;
+  margin-left: 1px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.project__name a.button:hover {
+  background-color: #9c9c9c;
+}
+
+.project__name a.button:hover i {
+  color: white;
+}
+
 .project__name::after {
   content: "";
   position: absolute;
@@ -150,6 +176,7 @@ header .button, header .link {
 }
 
 .project .description .text .tech__el {
+  cursor: default;
   font-weight: 400;
   background-color: #e5e5e5;
   padding: 2px 10px;
