--- a/style/main.sass
+++ b/style/main.sass
@@ -3,6 +3,10 @@ $container-width: 1000px
 $primary-font-color: #033B3D
 $secondary-font-color: rgb(175, 175, 175)
 
+$secondary-bg-color: #9c9c9c
+
+$upper-height: 30px
+
 *
     font-family: 'Work Sans', sans-serif
     color: $primary-font-color
@@ -28,14 +32,14 @@ body
         top: 0 
         left: 0
         width: 100% 
-        height: 140px
+        height: $upper-height
         background-color: #0CC59E
 
     &::after 
         z-index: -1
         content: ""
         position: absolute
-        top: 130px 
+        top: $upper-height - 10px
         left: 0
         width: 100% 
         height: 100%
@@ -97,6 +101,23 @@ header
         display: flex
         justify-content: space-between
         align-items: center
+        a.button
+            display: inline-block
+            text-align: center
+            width: 25px
+            height: 25px
+            padding: 10px
+            margin-left: 10px
+            i
+                margin-top: 13px
+                margin-left: 1px
+                transition: 0.3s
+            transition: 0.3s
+            &:hover
+                i
+                    color: white
+                background-color: #9c9c9c
+        
         &::after
             content: ""
             position: absolute
@@ -114,6 +135,7 @@ header
             .tech
                 margin-bottom: 20px
                 &__el
+                    cursor: default
                     font-weight: 400
                     background-color: #e5e5e5
                     padding: 2px 10px
