--- a/style/main.sass
+++ b/style/main.sass
@@ -142,8 +142,10 @@ header
                     border-radius: 4px
                     display: inline
                     margin-left: 5px
-    .preview 
+    .preview
         width: 300px
+        video, img
+            width: 300px
 
 .center
     margin: auto
