--- a/style/main.sass
+++ b/style/main.sass
@@ -11,6 +11,12 @@ $upper-height: 30px
     font-family: 'Work Sans', sans-serif
     color: $primary-font-color
 
+.fade-enter-active, .fade-leave-active
+    transition: opacity .5s
+
+.fade-enter, .fade-leave-to
+    opacity: 0
+
 .no-margin
     margin: 0
 
@@ -49,6 +55,47 @@ body
 .flex 
     display: flex
     justify-content: space-between
+
+.menu
+    display: flex
+    justify-content: space-around
+    margin-bottom: 50px
+    height: 50px
+    .button
+        text-transform: uppercase
+        padding: 0
+        font-size: 1.2em
+        margin-right: 20px
+        position: relative
+        transition: 0.3s
+        &::after
+            content: ""
+            position: absolute
+            bottom: 0
+            left: 0
+            width: 0
+            height: 2px
+            display: block
+            background: $primary-font-color
+            transition: 0.3s
+        &:hover
+            font-size: 1.4em
+            &::after
+                width: 100%
+
+        h2
+            font-weight: 300
+    .menu--selected
+        font-size: 1.2em
+        &::after
+            content: ""
+            position: absolute
+            bottom: 0
+            left: 0
+            width: 100%
+            height: 2px
+            display: block
+            background: $primary-font-color
 
 header 
     padding: 30px 0
@@ -146,6 +193,33 @@ header
         width: 300px
         video, img
             width: 300px
+
+            
+.tech
+    margin-bottom: 20px
+    &__el
+        cursor: default
+        font-weight: 400
+        background-color: #e5e5e5
+        padding: 2px 10px
+        border-radius: 4px
+        display: inline
+        margin-left: 5px
+
+.languages
+    .section
+        margin-bottom: 20px
+        .tech
+            margin: 0
+        table
+            td
+                padding: 20px
+                border: 1px solid $primary-font-color
+            .tech__el
+                display: block
+                margin-bottom: 5px
+        display: flex
+        align-items: center
 
 .center
     margin: auto
