--- a/style/main.css
+++ b/style/main.css
@@ -73,6 +73,7 @@ body::after {
 }
 
 .menu .button {
+  background: transparent;
   text-transform: uppercase;
   padding: 0;
   font-size: 1.2em;
@@ -108,7 +109,7 @@ body::after {
 }
 
 .menu .menu--selected {
-  font-size: 1.2em;
+  font-size: 1.4em;
 }
 
 .menu .menu--selected::after {
@@ -169,14 +170,11 @@ header .button, header .link {
 
 .project {
   padding: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   -webkit-transition: 0.3s;
   transition: 0.3s;
-  border: 2px solid transparent;
-}
-
-.project:hover {
-  border: 2px solid #033B3D;
+  border: 2px solid #e6e6e6;
+  border-radius: 20px;
 }
 
 .project__name {
@@ -211,14 +209,6 @@ header .button, header .link {
   transition: 0.3s;
 }
 
-.project__name a.button:hover {
-  background-color: #9c9c9c;
-}
-
-.project__name a.button:hover i {
-  color: white;
-}
-
 .project__name::after {
   content: "";
   position: absolute;
@@ -226,7 +216,7 @@ header .button, header .link {
   bottom: 0px;
   width: 100%;
   height: 2px;
-  background-color: black;
+  background-color: #e6e6e6;
 }
 
 .project .description {
@@ -255,15 +245,34 @@ header .button, header .link {
 }
 
 .project .preview {
+  max-width: 300px;
+}
+
+.project .preview .media-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 300px;
+  margin: auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 300px;
 }
 
 .project .preview video, .project .preview img {
-  width: 300px;
+  width: 100%;
+  height: auto;
 }
 
-.tech {
-  margin-bottom: 20px;
+.text-align--center {
+  text-align: center;
+}
+
+.flex--jcsb {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .tech__el {
@@ -277,22 +286,40 @@ header .button, header .link {
 }
 
 .languages .section {
-  margin-bottom: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  margin: 50px 0px;
+}
+
+.languages .section h2 {
+  margin: 20px 0px;
 }
 
 .languages .section .tech {
-  margin: 0;
+  margin: auto;
+  width: 500px;
 }
 
-.languages .section table td {
+.languages .section table {
+  overflow: hidden;
+  border: 2px solid #e6e6e6;
+  border-radius: 20px;
+  margin: auto;
+  width: 100%;
+}
+
+.languages .section table tr:nth-child(2n + 2) {
+  background-color: #f8f8f8;
+}
+
+.languages .section table td, .languages .section table th {
   padding: 20px;
-  border: 1px solid #033B3D;
+}
+
+.languages .section table td.tech__col, .languages .section table th.tech__col {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .languages .section table .tech__el {
@@ -327,6 +354,7 @@ header .button, header .link {
   -webkit-transition: 0.3s;
   transition: 0.3s;
   padding: 20px;
+  background: transparent;
 }
 
 .contacts .button:hover {
