--- a/style/main.css
+++ b/style/main.css
@@ -28,6 +28,7 @@ h1, h2, h3, h4, h5, h6 {
 body {
   margin: 0;
   min-height: 100vh;
+  padding-bottom: 100px;
 }
 
 body::before {
@@ -51,6 +52,77 @@ body::after {
   height: 100%;
   background-image: url(../images/background.png);
   background-repeat: no-repeat;
+}
+
+.tooltip-parent {
+  position: relative;
+}
+
+.email-tooltip {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  left: -50px;
+  top: 44px;
+  padding: 10px;
+  background-color: #033B3D;
+  color: white;
+  border-radius: 7px;
+  opacity: 0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.email-tooltip--ok button {
+  background: #08bb3e !important;
+}
+
+.email-tooltip--ok button i {
+  color: white !important;
+}
+
+.email-tooltip button {
+  margin-left: 8px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  border-radius: 5px;
+}
+
+.email-tooltip button:hover {
+  background: white;
+}
+
+.email-tooltip button:hover i {
+  color: #033B3D;
+}
+
+.email-tooltip button i {
+  color: white;
+}
+
+.email-tooltip--open {
+  opacity: 1;
+}
+
+.email-tooltip::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 10px;
+  height: 10px;
+  top: -5px;
+  left: 50%;
+  background-color: #033B3D;
+  -webkit-transform: rotateZ(45deg);
+          transform: rotateZ(45deg);
 }
 
 .flex {
