--- a/style/main.sass
+++ b/style/main.sass
@@ -11,6 +11,7 @@ $upper-height: 30px
 
 *
     font-family: 'Work Sans', sans-serif
+    // font-family: 'Heebo', sans-serif
     color: $primary-font-color
 
 .fade-enter-active, .fade-leave-active
@@ -33,6 +34,8 @@ body
     margin: 0
     min-height: 100vh
 
+    padding-bottom: 100px
+
     &::before 
         z-index: -1
         content: ""
@@ -53,6 +56,53 @@ body
         height: 100%
         background-image: url(../images/background.png)
         background-repeat: no-repeat
+
+.tooltip-parent
+    position: relative
+
+.email-tooltip
+    display: flex
+    align-items: center
+    &--ok
+        button
+            background: #08bb3e !important
+            i
+                color: white !important
+    button
+        margin-left: 8px
+        background: transparent
+        border: none
+        cursor: pointer
+        padding: 10px
+        transition: 0.3s
+        border-radius: 5px
+        &:hover
+            background: white
+            i
+                color: $primary-font-color
+        i
+            color: white
+    position: absolute
+    left: -50px
+    top: 44px
+    padding: 10px
+    background-color: $primary-font-color
+    color: white
+    border-radius: 7px
+    opacity: 0
+    transition: 0.3s
+    &--open
+        opacity: 1
+    &::before
+        content: ""
+        position: absolute
+        display: block
+        width: 10px
+        height: 10px
+        top: -5px
+        left: 50%
+        background-color: $primary-font-color
+        transform: rotateZ(45deg)
 
 .flex 
     display: flex
