--- a/style/main.sass
+++ b/style/main.sass
@@ -1,9 +1,15 @@
-$container-width: 1000px
+$container-width: 900px
 
-$primary-font-color: #033B3D
 $secondary-font-color: rgb(163, 163, 163)
 
 $secondary-bg-color: #9c9c9c
+
+$my-dark: #222125
+$my-light: #f1eff8
+
+$active-color: #db4a07
+
+$primary-font-color: $my-light
 
 $light-grey: lighten(black, 90%)
 
@@ -11,8 +17,7 @@ $upper-height: 30px
 
 *
     font-family: 'Work Sans', sans-serif
-    // font-family: 'Heebo', sans-serif
-    color: $primary-font-color
+    color: $my-light
 
 .fade-enter-active, .fade-leave-active
     transition: opacity .5s
@@ -23,39 +28,66 @@ $upper-height: 30px
 .no-margin
     margin: 0
 
+.button, .link
+    cursor: pointer
+    font-size: 14px
+    border: none
+
+.button     
+    padding: 10px 20px
+    background: $my-light
+    padding: 10px 20px
+    border-radius: 100px
+    text-decoration: none
+
+.link 
+    padding: 5px 0px
+    position: relative
+    background: transparent
+    color: $my-light
+    &::after
+        content: ""
+        transition: 0.3s
+        position: absolute
+        left: 0px
+        bottom: 0px
+        width: 0
+        height: 2px
+        background-color: $my-light
+
+    &:hover::after 
+        width: 100%
+
 h1, h2, h3, h4, h5, h6
     margin: 0
     margin-bottom: 10px
 
+.color--dark
+    color: $my-dark
+
+.contact-button
+    transition: 0.3s
+    &:hover, &:active, &:focus
+        background-color: $active-color
+        color: white
+        box-shadow: 2px 2px 10px black
+
 .container 
     width: $container-width
 
+$opac: 0.08
+
+$default-border-radius: 0px
+
+.text-transform--uppercase
+    // font-weight: 300
+    text-transform: uppercase
+
 body 
+    background-color: $my-dark
     margin: 0
     min-height: 100vh
-
     padding-bottom: 100px
-
-    &::before 
-        z-index: -1
-        content: ""
-        position: absolute
-        top: 0 
-        left: 0
-        width: 100% 
-        height: $upper-height
-        background-color: #0cb4c5
-
-    &::after 
-        z-index: -1
-        content: ""
-        position: absolute
-        top: $upper-height - 10px
-        left: 0
-        width: 100% 
-        height: 100%
-        background-image: url(../images/background.png)
-        background-repeat: no-repeat
 
 .tooltip-parent
     position: relative
@@ -65,10 +97,15 @@ body
     align-items: center
     &--ok
         button
-            background: #08bb3e !important
+            background: $active-color !important
             i
-                color: white !important
+                color: $my-light !important
     button
+        display: flex
+        justify-content: center
+        align-items: center
+        width: 36px
+        height: 36px
         margin-left: 8px
         background: transparent
         border: none
@@ -77,17 +114,17 @@ body
         transition: 0.3s
         border-radius: 5px
         &:hover
-            background: white
+            background: $my-dark
             i
-                color: $primary-font-color
+                color: $my-light
         i
-            color: white
+            color: $my-dark
     position: absolute
     left: -50px
     top: 44px
     padding: 10px
     background-color: $primary-font-color
-    color: white
+    color: $my-dark
     border-radius: 7px
     opacity: 0
     transition: 0.3s
@@ -115,7 +152,7 @@ body
     height: 50px
     .button
         background: transparent
-        text-transform: uppercase
+        // text-transform: uppercase
         padding: 0
         font-size: 1.2em
         margin-right: 20px
@@ -124,16 +161,20 @@ body
         &::after
             content: ""
             position: absolute
-            bottom: 0
-            left: 0
+            bottom: -15px
+            left: 50%
             width: 0
             height: 2px
             display: block
             background: $primary-font-color
             transition: 0.3s
+            opacity: 0
         &:hover
             font-size: 1.4em
             &::after
+                bottom: 0
+                opacity: 1
+                left: 0
                 width: 100%
 
         h2
@@ -149,49 +190,30 @@ body
             height: 2px
             display: block
             background: $primary-font-color
+            opacity: 1
 
 header 
     padding: 30px 0
     .button, .link
         margin-left: 20px
 
-.button, .link
-    cursor: pointer
-    font-size: 14px
-    border: none
-
-.button     
-    padding: 10px 20px
-    background: white
-    padding: 10px 20px
-    border-radius: 100px
-    text-decoration: none
-
-.link 
-    padding: 5px 0px
-    position: relative
-    background: transparent
-    color: white
-
-    &::after
-        content: ""
-        transition: 0.3s
-        position: absolute
-        left: 0px
-        bottom: 0px
-        width: 0
-        height: 2px
-        background-color: white
-
-    &:hover::after 
-        width: 100%
+.section-with-border
+    transition: 0.3s
+    border: 2px solid rgba($light-grey, 0.2)
+    &:hover
+        border-color: $light-grey
 
 .project 
     padding: 20px
     margin-bottom: 30px
-    transition: 0.3s
-    border: 2px solid $light-grey
-    border-radius: 20px
+
+    &:hover
+        .project__name
+            &::after
+                background-color: $light-grey
+
+    &__button
+        margin-left: 10px
     
     &__name
         position: relative
@@ -200,42 +222,44 @@ header
         justify-content: space-between
         align-items: center
         a.button
+            background: transparent
             display: inline-block
             text-align: center
             width: 25px
             height: 25px
             padding: 10px
             margin-left: 10px
+            transition: 0.3s
             i
                 margin-top: 13px
                 margin-left: 1px
-                transition: 0.3s
-            transition: 0.3s
-            // &:hover
-            //     i
-            //         color: white
-            //     background-color: #9c9c9c
-        
+                transition: 0.3s        
         &::after
             content: ""
             position: absolute
-            left: 0px
+            left: -20px
             bottom: 0px
-            width: 100%
+            width: calc(100% + 40px)
             height: 2px
-            background-color: $light-grey
+            background-color: rgba($light-grey, 0.2)
+            transition: 0.3s
     
     .description
         margin-top: 20px
         display: flex
         .text
             margin-left: 20px
+            p
+                line-height: 1.5
+                text-align: justify
             .tech
+                display: flex
+                justify-content: start
+                align-items: center
+                flex-wrap: wrap
                 margin-bottom: 20px
                 &__el
-                    cursor: default
-                    font-weight: 400
-                    background-color: #e5e5e5
+                    margin-top: 3px
                     padding: 2px 10px
                     border-radius: 4px
                     display: inline
@@ -244,14 +268,14 @@ header
         max-width: 300px
         .media-wrapper
             display: flex
-            height: 300px
             margin: auto
             align-items: center
+            justify-content: center
+            height: 300px
             width: 300px
         video, img
             width: 100%
             height: auto
-            // height: auto
 
 .text-align--center
     text-align: center
@@ -264,7 +288,7 @@ header
     &__el
         cursor: default
         font-weight: 400
-        background-color: #e5e5e5
+        background-color: #4b4b4b
         padding: 2px 10px
         border-radius: 4px
         display: inline
@@ -280,13 +304,11 @@ header
             width: 500px
         table
             overflow: hidden
-            border: 2px solid $light-grey
-            border-radius: 20px
             margin: auto
             width: 100%
             tr
                 &:nth-child(2n + 2)
-                    background-color: #f8f8f8
+                    background-color: lighten($my-dark, 3%)
             td, th
                 padding: 20px
                 &.tech__col
@@ -303,24 +325,35 @@ header
     color: $secondary-font-color
     font-weight: 300
 
-.contacts 
+.contacts
     position: fixed
     display: flex
     flex-direction: column
-    left: 20px
-    bottom: 10px
+    left: 30px
+    bottom: 30px
     .button
-        margin: 10px 0px
-        transition: 0.3s
-        padding: 20px
-        background: transparent
-        &:hover
-            background: $secondary-bg-color
-            i
-                color: white
+        margin-top: 10px
 
+.button--round
+    background: transparent
+    &:not(.button--no-background)
+        &:hover
+            background: $my-light
+            i
+                color: $active-color
+    display: flex
+    justify-content: center
+    align-items: center
+    width: 48px
+    height: 48px
+    transition: 0.3s
+    padding: 10px
+    i
+        transition: 0.3s
+        font-size: 36px
+    &:hover
         i
-            font-size: 18px
+            color: $active-color
 
 #name 
     position: relative
