--- a/style/main.sass
+++ b/style/main.sass
@@ -5,7 +5,7 @@ $secondary-font-color: rgb(163, 163, 163)
 $secondary-bg-color: #9c9c9c
 
 $my-dark: #222125
-$my-light: #f1eff8
+$my-light: #f5f4f8
 
 $active-color: #db4a07
 
@@ -17,7 +17,87 @@ $upper-height: 30px
 
 *
     font-family: 'Work Sans', sans-serif
-    color: $my-light
+
+.color--dark
+    color: $my-dark
+
+.contact-button
+    transition: 0.3s
+    background-color: darken($my-dark, 10%)
+    &:hover, &:active, &:focus
+        background-color: $active-color
+        color: white
+        box-shadow: 2px 2px 10px black
+    color: white
+
+body
+    transition: 0.3s
+    margin: 0
+    min-height: 100vh
+    padding-bottom: 100px
+    &.hide
+        display: none
+    &.theme--dark
+        *
+            color: $my-light
+        background-color: $my-dark
+        .menu > .button::after
+            background: $primary-font-color
+        .project
+            &:hover
+                .project__name::after
+                    background-color: $light-grey
+            .project__name::after
+                background-color: rgba($light-grey, 0.2)
+        .languages
+            table
+                tr:nth-child(2n + 2)
+                    background-color: lighten($my-dark, 3%)
+        .tech__el
+            background-color: #4b4b4b
+        .section-with-border
+            transition: 0.3s
+            border: 2px solid rgba($light-grey, 0.2)
+            &:hover
+                border-color: $light-grey
+        .button.button--1
+            color: $my-dark
+            transition: 0.3s
+            &:hover, &:active, &:focus
+                background-color: $active-color
+                color: white
+                box-shadow: 2px 2px 10px black
+    &:not(.theme--dark)
+        background-color: $my-light
+        .menu > .button::after
+            background: $my-dark
+        .project
+            &:hover
+                .project__name::after
+                    background-color: darken($my-light, 10%)
+            .project__name::after
+                background-color: darken($my-light, 3%)
+        .languages
+            table
+                tr:nth-child(2n + 2)
+                    background-color: darken($my-light, 3%)
+        .tech__el
+            background-color: #ceccd9
+        .section-with-border
+            transition: 0.3s
+            border: 2px solid darken($my-light, 3%)
+            &:hover
+                border-color: darken($my-light, 10%)
+        i
+            color: $my-dark
+        .button.button--1
+            color: $my-light
+            transition: 0.3s
+            background-color: $my-dark
+            &:hover, &:active, &:focus
+                background-color: $active-color
+                color: white
+                box-shadow: 2px 2px 10px darken($my-light, 30%)
 
 .fade-enter-active, .fade-leave-active
     transition: opacity .5s
@@ -33,9 +113,8 @@ $upper-height: 30px
     font-size: 14px
     border: none
 
-.button     
+.button
     padding: 10px 20px
-    background: $my-light
     padding: 10px 20px
     border-radius: 100px
     text-decoration: none
@@ -62,16 +141,6 @@ h1, h2, h3, h4, h5, h6
     margin: 0
     margin-bottom: 10px
 
-.color--dark
-    color: $my-dark
-
-.contact-button
-    transition: 0.3s
-    &:hover, &:active, &:focus
-        background-color: $active-color
-        color: white
-        box-shadow: 2px 2px 10px black
-
 .container 
     width: $container-width
 
@@ -83,14 +152,38 @@ $default-border-radius: 0px
     // font-weight: 300
     text-transform: uppercase
 
-body 
-    background-color: $my-dark
-    margin: 0
-    min-height: 100vh
-    padding-bottom: 100px
-
 .tooltip-parent
     position: relative
+
+body.theme--dark
+    .email-tooltip
+        background-color: $my-light
+        color: $my-dark
+        button
+            background: transparent
+            &:hover
+                background: $my-dark
+                i
+                    color: $my-light
+            i
+                color: $my-dark
+        &::before
+            background-color: $my-light
+
+body:not(.theme--dark)
+    .email-tooltip
+        background-color: $my-dark
+        color: $my-light
+        button
+            background: transparent
+            &:hover
+                background: $my-light
+                i
+                    color: $my-dark
+            i
+                color: $my-light
+        &::before
+            background-color: $my-dark
 
 .email-tooltip
     display: flex
@@ -113,18 +206,16 @@ body
         padding: 10px
         transition: 0.3s
         border-radius: 5px
-        &:hover
-            background: $my-dark
-            i
-                color: $my-light
-        i
-            color: $my-dark
+        // &:hover
+        //     background: $my-dark
+        //     i
+        //         color: $my-light
+        // i
+        //     color: $my-dark
     position: absolute
     left: -50px
     top: 44px
     padding: 10px
-    background-color: $primary-font-color
-    color: $my-dark
     border-radius: 7px
     opacity: 0
     transition: 0.3s
@@ -138,7 +229,6 @@ body
         height: 10px
         top: -5px
         left: 50%
-        background-color: $primary-font-color
         transform: rotateZ(45deg)
 
 .flex 
@@ -197,24 +287,14 @@ header
     .button, .link
         margin-left: 20px
 
-.section-with-border
-    transition: 0.3s
-    border: 2px solid rgba($light-grey, 0.2)
-    &:hover
-        border-color: $light-grey
+.flex--jcc
+    justify-content: center
 
 .project 
     padding: 20px
     margin-bottom: 30px
-
-    &:hover
-        .project__name
-            &::after
-                background-color: $light-grey
-
     &__button
-        margin-left: 10px
-    
+        margin-left: 10px    
     &__name
         position: relative
         padding-bottom: 20px
@@ -223,11 +303,7 @@ header
         align-items: center
         a.button
             background: transparent
-            display: inline-block
-            text-align: center
-            width: 25px
-            height: 25px
-            padding: 10px
+            display: block
             margin-left: 10px
             transition: 0.3s
             i
@@ -241,7 +317,6 @@ header
             bottom: 0px
             width: calc(100% + 40px)
             height: 2px
-            background-color: rgba($light-grey, 0.2)
             transition: 0.3s
     
     .description
@@ -288,7 +363,6 @@ header
     &__el
         cursor: default
         font-weight: 400
-        background-color: #4b4b4b
         padding: 2px 10px
         border-radius: 4px
         display: inline
@@ -306,9 +380,6 @@ header
             overflow: hidden
             margin: auto
             width: 100%
-            tr
-                &:nth-child(2n + 2)
-                    background-color: lighten($my-dark, 3%)
             td, th
                 padding: 20px
                 &.tech__col
@@ -344,8 +415,9 @@ header
     display: flex
     justify-content: center
     align-items: center
-    width: 48px
-    height: 48px
+    box-sizing: border-box
+    width: 56px
+    height: 56px
     transition: 0.3s
     padding: 10px
     i
