--- a/style/main.sass
+++ b/style/main.sass
@@ -35,6 +35,8 @@ body
     margin: 0
     min-height: 100vh
     padding-bottom: 100px
+    // background: url(../images/logo.png)
+    // background-repeat: no-repeat
     &.hide
         display: none
     &.theme--dark
