--- a/style/main.sass
+++ b/style/main.sass
@@ -17,6 +17,7 @@ $upper-height: 30px
 
 *
     font-family: 'Work Sans', sans-serif
+    box-sizing: border-box
 
 .color--dark
     color: $my-dark
@@ -29,6 +30,60 @@ $upper-height: 30px
         color: white
         box-shadow: 2px 2px 10px black
     color: white
+
+@media screen and (max-width: 1100px)
+    .section-with-border
+        border-width: 2px
+        border-left-width: 0px
+        border-right-width: 0px
+    .contacts
+        display: none !important
+    .container 
+        width: 100%
+    header
+        padding: 10px
+    .center
+        margin: auto
+    .email-tooltip
+        left: -135px
+        top: 44px
+        &::before
+            top: -5px
+            right: 60px
+    .project
+        margin-bottom: 50px
+        &__name::after
+            display: none
+        .description
+            display: flex
+            flex-direction: column
+            justify-content: center
+            align-items: center
+            margin-top: 0
+
+@media screen and (min-width: 1100px)      
+    .section-with-border
+        border-width: 2px
+    .contacts
+        display: flex
+    .container 
+        width: $container-width
+    header 
+        padding: 30px 0
+    .center
+        margin: auto
+    .email-tooltip
+        left: -72px
+        top: 44px
+        &::before
+            top: -5px
+            left: 50%
+    .project
+        margin-bottom: 30px
+        &__name::after
+            display: block
+        .description            
+            margin-top: 20px
 
 body
     transition: 0.3s
@@ -59,7 +114,9 @@ body
             background-color: #4b4b4b
         .section-with-border
             transition: 0.3s
-            border: 2px solid rgba($light-grey, 0.2)
+            border-style: solid
+            border-color: rgba($light-grey, 0.2)
+            // border: 2px solid rgba($light-grey, 0.2)
             &:hover
                 border-color: $light-grey
         .button.button--1
@@ -87,7 +144,8 @@ body
             background-color: #ceccd9
         .section-with-border
             transition: 0.3s
-            border: 2px solid darken($my-light, 3%)
+            border-style: solid
+            border-color: darken($my-light, 3%)
             &:hover
                 border-color: darken($my-light, 10%)
         i
@@ -143,9 +201,6 @@ h1, h2, h3, h4, h5, h6
     margin: 0
     margin-bottom: 10px
 
-.container 
-    width: $container-width
-
 $opac: 0.08
 
 $default-border-radius: 0px
@@ -195,6 +250,11 @@ body:not(.theme--dark)
             background: $active-color !important
             i
                 color: $my-light !important
+    position: absolute
+    padding: 10px
+    border-radius: 7px
+    opacity: 0
+    transition: 0.3s
     button
         display: flex
         justify-content: center
@@ -208,19 +268,6 @@ body:not(.theme--dark)
         padding: 10px
         transition: 0.3s
         border-radius: 5px
-        // &:hover
-        //     background: $my-dark
-        //     i
-        //         color: $my-light
-        // i
-        //     color: $my-dark
-    position: absolute
-    left: -50px
-    top: 44px
-    padding: 10px
-    border-radius: 7px
-    opacity: 0
-    transition: 0.3s
     &--open
         opacity: 1
     &::before
@@ -229,8 +276,6 @@ body:not(.theme--dark)
         display: block
         width: 10px
         height: 10px
-        top: -5px
-        left: 50%
         transform: rotateZ(45deg)
 
 .flex 
@@ -284,17 +329,11 @@ body:not(.theme--dark)
             background: $primary-font-color
             opacity: 1
 
-header 
-    padding: 30px 0
-    .button, .link
-        margin-left: 20px
-
 .flex--jcc
     justify-content: center
 
 .project 
     padding: 20px
-    margin-bottom: 30px
     &__button
         margin-left: 10px    
     &__name
@@ -311,7 +350,7 @@ header
             i
                 margin-top: 13px
                 margin-left: 1px
-                transition: 0.3s        
+                transition: 0.3s
         &::after
             content: ""
             position: absolute
@@ -322,7 +361,6 @@ header
             transition: 0.3s
     
     .description
-        margin-top: 20px
         display: flex
         .text
             margin-left: 20px
@@ -360,6 +398,10 @@ header
 .flex
     &--jcsb
         justify-content: space-between
+    &--jcsa
+        justify-content: space-around
+    &--wrap
+        flex-wrap: wrap
 
 .tech
     &__el
@@ -368,6 +410,7 @@ header
         padding: 2px 10px
         border-radius: 4px
         display: inline
+        margin-top: 3px
         margin-left: 5px
 
 .languages
@@ -390,9 +433,6 @@ header
             .tech__el
                 display: block
                 margin-bottom: 5px
-
-.center
-    margin: auto
 
 .subtitle 
     color: $secondary-font-color
