--- a/style/main.css
+++ b/style/main.css
@@ -1,5 +1,7 @@
 * {
   font-family: 'Work Sans', sans-serif;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .color--dark {
@@ -18,6 +20,93 @@
   color: white;
   -webkit-box-shadow: 2px 2px 10px black;
           box-shadow: 2px 2px 10px black;
+}
+
+@media screen and (max-width: 1100px) {
+  .section-with-border {
+    border-width: 2px;
+    border-left-width: 0px;
+    border-right-width: 0px;
+  }
+  .contacts {
+    display: none !important;
+  }
+  .container {
+    width: 100%;
+  }
+  header {
+    padding: 10px;
+  }
+  .center {
+    margin: auto;
+  }
+  .email-tooltip {
+    left: -135px;
+    top: 44px;
+  }
+  .email-tooltip::before {
+    top: -5px;
+    right: 60px;
+  }
+  .project {
+    margin-bottom: 50px;
+  }
+  .project__name::after {
+    display: none;
+  }
+  .project .description {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-top: 0;
+  }
+}
+
+@media screen and (min-width: 1100px) {
+  .section-with-border {
+    border-width: 2px;
+  }
+  .contacts {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .container {
+    width: 900px;
+  }
+  header {
+    padding: 30px 0;
+  }
+  .center {
+    margin: auto;
+  }
+  .email-tooltip {
+    left: -72px;
+    top: 44px;
+  }
+  .email-tooltip::before {
+    top: -5px;
+    left: 50%;
+  }
+  .project {
+    margin-bottom: 30px;
+  }
+  .project__name::after {
+    display: block;
+  }
+  .project .description {
+    margin-top: 20px;
+  }
 }
 
 body {
@@ -63,7 +152,8 @@ body.theme--dark .tech__el {
 body.theme--dark .section-with-border {
   -webkit-transition: 0.3s;
   transition: 0.3s;
-  border: 2px solid rgba(230, 230, 230, 0.2);
+  border-style: solid;
+  border-color: rgba(230, 230, 230, 0.2);
 }
 
 body.theme--dark .section-with-border:hover {
@@ -110,7 +200,8 @@ body:not(.theme--dark) .tech__el {
 body:not(.theme--dark) .section-with-border {
   -webkit-transition: 0.3s;
   transition: 0.3s;
-  border: 2px solid #edebf2;
+  border-style: solid;
+  border-color: #edebf2;
 }
 
 body:not(.theme--dark) .section-with-border:hover {
@@ -189,10 +280,6 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 10px;
 }
 
-.container {
-  width: 900px;
-}
-
 .text-transform--uppercase {
   text-transform: uppercase;
 }
@@ -259,8 +346,6 @@ body:not(.theme--dark) .email-tooltip::before {
       -ms-flex-align: center;
           align-items: center;
   position: absolute;
-  left: -50px;
-  top: 44px;
   padding: 10px;
   border-radius: 7px;
   opacity: 0;
@@ -308,8 +393,6 @@ body:not(.theme--dark) .email-tooltip::before {
   display: block;
   width: 10px;
   height: 10px;
-  top: -5px;
-  left: 50%;
   -webkit-transform: rotateZ(45deg);
           transform: rotateZ(45deg);
 }
@@ -388,14 +471,6 @@ body:not(.theme--dark) .email-tooltip::before {
   opacity: 1;
 }
 
-header {
-  padding: 30px 0;
-}
-
-header .button, header .link {
-  margin-left: 20px;
-}
-
 .flex--jcc {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -404,7 +479,6 @@ header .button, header .link {
 
 .project {
   padding: 20px;
-  margin-bottom: 30px;
 }
 
 .project__button {
@@ -452,7 +526,6 @@ header .button, header .link {
 }
 
 .project .description {
-  margin-top: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -524,12 +597,23 @@ header .button, header .link {
           justify-content: space-between;
 }
 
+.flex--jcsa {
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.flex--wrap {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
 .tech__el {
   cursor: default;
   font-weight: 400;
   padding: 2px 10px;
   border-radius: 4px;
   display: inline;
+  margin-top: 3px;
   margin-left: 5px;
 }
 
@@ -567,10 +651,6 @@ header .button, header .link {
 .languages .section table .tech__el {
   display: block;
   margin-bottom: 5px;
-}
-
-.center {
-  margin: auto;
 }
 
 .subtitle {
