--- a/style/main.sass
+++ b/style/main.sass
@@ -103,6 +103,8 @@ $upper-height: 30px
             display: block
         .description            
             margin-top: 20px
+            .text
+                margin-left: 20px
     .languages > .section > .tech
         width: 500px
 
@@ -385,7 +387,6 @@ body:not(.theme--dark)
     .description
         display: flex
         .text
-            margin-left: 20px
             p
                 line-height: 1.5
                 text-align: justify
