--- a/style/main.sass
+++ b/style/main.sass
@@ -375,6 +375,7 @@ body:not(.theme--dark)
                 margin-top: 13px
                 margin-left: 1px
                 transition: 0.3s
+                font-size: 24px
         &::after
             content: ""
             position: absolute
