--- a/style/main.css
+++ b/style/main.css
@@ -141,6 +141,10 @@
   }
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 body {
   -webkit-transition: 0.3s;
   transition: 0.3s;
@@ -258,12 +262,19 @@ body:not(.theme--dark) .button.button--1:hover, body:not(.theme--dark) .button.b
           box-shadow: 2px 2px 10px #a097bd;
 }
 
-.fade-enter-active, .fade-leave-active {
-  -webkit-transition: opacity .5s;
-  transition: opacity .5s;
+.fade-enter-active {
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
 }
 
-.fade-enter, .fade-leave-to {
+.fade-leave-active {
+  -webkit-transition: all 0.3s cubic-bezier(1, 0.5, 0.8, 1);
+  transition: all 0.3s cubic-bezier(1, 0.5, 0.8, 1);
+}
+
+.fade-enter-from, .fade-leave-to {
+  -webkit-transform: translateX(20px);
+          transform: translateX(20px);
   opacity: 0;
 }
 
