--- a/style/main.sass
+++ b/style/main.sass
@@ -108,13 +108,14 @@ $upper-height: 30px
     .languages > .section > .tech
         width: 500px
 
+html, body
+    overflow-x: hidden
+
 body
     transition: 0.3s
     margin: 0
     min-height: 100vh
     padding-bottom: 100px
-    // background: url(../images/logo.png)
-    // background-repeat: no-repeat
     &.hide
         display: none
     &.theme--dark
@@ -182,10 +183,14 @@ body
                 color: white
                 box-shadow: 2px 2px 10px darken($my-light, 30%)
 
-.fade-enter-active, .fade-leave-active
-    transition: opacity .5s
+.fade-enter-active
+    transition: all 0.3s ease-out
 
-.fade-enter, .fade-leave-to
+.fade-leave-active    
+    transition: all 0.3s cubic-bezier(1, 0.5, 0.8, 1)
+
+.fade-enter-from, .fade-leave-to
+    transform: translateX(20px)
     opacity: 0
 
 .no-margin
